--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,22 @@
     color: var(--primary-text-color);
     }
 
+    h1,h2,h3,h4,h5,h6,p {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+ 
+    
+}
 .nav{
     text-decoration: none;
+    /* display:flex; */
 }
 
 .nav-logo{
@@ -43,7 +57,19 @@
     
 }
 
-ul{list-style: none;}
+ul{list-style: none;
+margin: 0px;
+padding: 0px;}
+
+
+.nav-list{
+    display:flex;
+
+}
+
+.nav-list>li{
+    margin-right: 50px;
+}
 
 .nav-list-link{
     font-weight: 500;
@@ -65,6 +91,14 @@ ul{list-style: none;}
     color:var(--accent-color);
 }
 
+.contacts{
+    display:flex;
+
+}
+
+.contacts>li{
+    margin-right: 50px;
+}
 .contacts-mail{
     font-weight: 500;
     font-size: 14px;
@@ -96,16 +130,22 @@ ul{list-style: none;}
 /* hero */
 .hero{
     background-color:var(--dark-background-color);
+   text-align: center;
 }
 
 .hero-title{
     font-weight: 900;
     font-size: 44px;
     line-height:1.36;
-    text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.06em;
     color:var(--primary-white-color);
+
+    padding-top: 200px;
+    margin-bottom: 30px;
+    margin-left: 450px;
+    margin-right: 450px;
+
 }
 
 .hero-button{
@@ -115,7 +155,6 @@ ul{list-style: none;}
     line-height: 1.87;
     display: flex;
     align-items: center;
-    text-align: center;
     letter-spacing: 0.06em;
     color:var(--primary-white-color);
     background-color:var(--accent-color);
@@ -147,6 +186,9 @@ ul{list-style: none;}
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:var(--title-text-color);
+
+    margin-top: 94px;
+    margin-bottom: 10px;
 }
 
 .features-desс{
@@ -154,6 +196,13 @@ ul{list-style: none;}
     line-height: 1.71;
     letter-spacing: 0.03em;
     color:var(--primary-text-color);
+
+    margin-bottom: 94px;
+  }
+
+  /* Чем мы занимаемся */
+  .section-title{
+      margin-bottom: 50px;
   }
 
 /* section team */
@@ -167,6 +216,8 @@ ul{list-style: none;}
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+
+    margin-bottom: 10px;
 }
     
 .job{
@@ -175,6 +226,8 @@ ul{list-style: none;}
     text-align: center;
     letter-spacing: 0.03em;
     color:var(--primary-text-color);
+
+    margin-bottom: 30px;
 }
 
 /* footer */
