--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,6 @@ padding: 0px;}
 
 }
 
-.nav-list>li{
-    margin-right: 50px;
-}
 
 .nav-list-link{
     font-weight: 500;
@@ -78,8 +75,14 @@ padding: 0px;}
     letter-spacing: 0.02em;
     color: var(--title-text-color);
     text-decoration:none;
+    margin-right: 50px;
     
 }
+
+.nav-list.item:not(:last-child){
+    margin-right: 50px;
+}
+
 
 .nav-list-link:hover,
 .nav-list-link:focus {
@@ -96,9 +99,13 @@ padding: 0px;}
 
 }
 
-.contacts>li{
+.contacts>li :not(last-child){
     margin-right: 50px;
 }
+
+
+
+
 .contacts-mail{
     font-weight: 500;
     font-size: 14px;
@@ -121,7 +128,10 @@ padding: 0px;}
     letter-spacing: 0.02em;
     text-decoration:none;
     color:var(--primary-text-color);
+
+    margin-right: 0px;
 }
+
 .contacts-phone:hover,
 .contacts-phone:focus{
     color: var(--accent-color);
