--- a/css/styles.css
+++ b/css/styles.css
@@ -75,11 +75,10 @@ padding: 0px;}
     letter-spacing: 0.02em;
     color: var(--title-text-color);
     text-decoration:none;
-    margin-right: 50px;
     
 }
 
-.nav-list.item:not(:last-child){
+.item:not(last-child) {
     margin-right: 50px;
 }
 
@@ -99,7 +98,7 @@ padding: 0px;}
 
 }
 
-.contacts>li :not(last-child){
+.contacts>li:not(last-child){
     margin-right: 50px;
 }
 
