--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,13 @@
         margin-top: 0px;
         margin-bottom: 0px;
     }
+
+    ul {
+        list-style: none;
+        margin: 0px;
+    }
+
+
 .container{
     width: 1200px;
     margin-left: auto;
@@ -32,14 +39,25 @@
     padding-left: 15px;
     padding-right: 15px;
  
-    
 }
+
+.container.main{
+    display: flex;
+    align-items:center;
+}
+
+
+
 .nav{
     text-decoration: none;
-    /* display:flex; */
+    display:flex;
 }
 
 .nav-logo{
+    display: flex;
+    align-items:center;
+    /* padding-left: 215px; */
+
     font-family: var(--secondary-font-family);
     font-size: 26px;
     font-weight: 700;
@@ -57,24 +75,26 @@
     
 }
 
-ul{list-style: none;
-margin: 0px;
-padding: 0px;}
 
 
 .nav-list{
     display:flex;
+    margin-left: 90px;
 
 }
 
 
 .nav-list-link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 29px;
+
+    color: var(--title-text-color);
+    text-decoration:none;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--title-text-color);
-    text-decoration:none;
     
 }
 
@@ -95,6 +115,7 @@ padding: 0px;}
 
 .contacts{
     display:flex;
+    margin-left: auto;
 
 }
 
@@ -106,6 +127,8 @@ padding: 0px;}
 
 
 .contacts-mail{
+    margin-right: 50px;
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -121,6 +144,8 @@ padding: 0px;}
     
 }
 .contacts-phone{
+    margin-right: 0px;
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -128,7 +153,7 @@ padding: 0px;}
     text-decoration:none;
     color:var(--primary-text-color);
 
-    margin-right: 0px;
+    
 }
 
 .contacts-phone:hover,
@@ -152,8 +177,8 @@ padding: 0px;}
 
     padding-top: 200px;
     margin-bottom: 30px;
-    margin-left: 450px;
-    margin-right: 450px;
+    /* margin-left: 450px;
+    margin-right: 450px; */
 
 }
 
@@ -162,7 +187,6 @@ padding: 0px;}
     font-weight:900;
     font-size: 16px;
     line-height: 1.87;
-    display: flex;
     align-items: center;
     letter-spacing: 0.06em;
     color:var(--primary-white-color);
