--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,6 @@
 }
 
 
-
-
 .contacts-mail{
     margin-right: 50px;
 
@@ -177,12 +175,13 @@
 
     padding-top: 200px;
     margin-bottom: 30px;
-    /* margin-left: 450px;
-    margin-right: 450px; */
+   
 
 }
 
 .hero-button{
+    margin-bottom: 200px;
+
     font-family:inherit;
     font-weight:900;
     font-size: 16px;
@@ -210,8 +209,16 @@
 
     color:var(--title-text-color);
 }
-  
-    
+
+.features{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+.features-item{
+    width: 25%;
+
+}
 .features-title{
     font-weight: 700;
     font-size: 14px;
@@ -225,6 +232,7 @@
 }
 
 .features-desс{
+
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
