--- a/css/styles.css
+++ b/css/styles.css
@@ -212,11 +212,10 @@
 
 .features{
     display: flex;
-    flex-wrap: wrap;
 
 }
 .features-item{
-    width: 25%;
+    width: 270px;
     background-color:tomato;
 
 }
@@ -278,6 +277,12 @@
     
 }
 
+.logo-bottom{
+    margin-top: 75px;
+    margin-left: 215px;
+    margin-bottom: 20px;
+
+}
 .footer-logo{
     font-family: var(--secondary-font-family);
     font-weight: 700;
@@ -296,6 +301,7 @@
     color: var(--primary-white-color);
     
 }
+
 .add{
      font-style: normal;
 }
@@ -319,7 +325,14 @@
     text-decoration: underline;
 }
 /* Портофолио */
+.projects{
+    display: flex;
+}
 
+.project-item:not(:last-child){
+    margin-right: 8px;
+
+}
 .project-button {
     font-family: inherit;
     font-weight: 500;
