--- a/css/styles.css
+++ b/css/styles.css
@@ -327,13 +327,17 @@
 /* Портофолио */
 .projects{
     display: flex;
+    justify-content: center;
 }
 
 .project-item:not(:last-child){
     margin-right: 8px;
 
 }
-.project-button {
+.project-button { 
+    padding: 6px 22px;
+    margin-bottom: 50px;
+    
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
