--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,24 @@
     color: var(--primary-white-color);
 }
 
+.list-pictures{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item-picture{
+    width:calc((100%-60px) / 3);
+    margin-right:  30px;
+    margin-bottom: 30px;
+}
+
+.item-picture:nth-child(3n){
+    margin-right: 0px;
+}
+
+.item-picture:nth-last-child(-n+3){
+    margin-bottom: 0px;
+}
 .project-name{
     font-weight: 700;
     font-size: 18px;
