--- a/css/styles.css
+++ b/css/styles.css
@@ -323,12 +323,12 @@
     text-decoration: underline;
 }
 /* Портофолио */
-.projects{
+.container.projects{
     display: flex;
-    justify-content: center;
+   justify-content: center;
 }
 .project-item{
-    width: calc((100%-90px)/3);
+    width: calc(100%/3 - 30px);
 }
 
 .project-item:not(:last-child){
@@ -367,9 +367,10 @@
 }
 
 .item-picture{
-    width: calc((100%-60px)/3);
+   flex-basis: calc(100%/3 -30px);
     margin-right:  30px;
     margin-bottom: 30px;
+    
 }
 
 .item-picture:nth-child(3n){
