--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,7 @@
 .nav-logo{
     display: flex;
     align-items:center;
-    /* padding-left: 215px; */
-
+   
     font-family: var(--secondary-font-family);
     font-size: 26px;
     font-weight: 700;
@@ -78,7 +77,6 @@
     margin-left: 90px;
 
 }
-
 
 .nav-list-link{
     display: block;
@@ -208,13 +206,13 @@
 
 .features{
     display: flex;
-    /* flex-wrap: wrap; */
+  
 
 }
 .features-item{
-    /* width: 270px; */
+    
     background-color:tomato;
-    width:calc((100%-90px)/4);
+    width:calc(100%/4 -30px);
 
 }
 .features-title{
@@ -323,21 +321,16 @@
     text-decoration: underline;
 }
 /* Портофолио */
-.container.projects{
+.projects{
     display: flex;
-   justify-content: center;
-}
-.project-item{
-    width: calc(100%/3 - 30px);
+    justify-content: center;
 }
 
-.project-item:not(:last-child){
-    margin-right: 8px;
-
-}
 .project-button { 
     padding: 6px 22px;
     margin-bottom: 50px;
+    margin-right: 8px;
+  
     
     font-family: inherit;
     font-weight: 500;
@@ -355,6 +348,10 @@
 
 }
 
+/* .project-button:not(:last-child){
+    margin-right: 8px;
+} */
+
 .project-button:hover,
 .project-button:focus {
     background-color: var(--accent-color);
@@ -367,7 +364,7 @@
 }
 
 .item-picture{
-   flex-basis: calc(100%/3 -30px);
+    width: calc(100%/3 -30px);
     margin-right:  30px;
     margin-bottom: 30px;
     
