--- a/css/styles.css
+++ b/css/styles.css
@@ -348,9 +348,6 @@
 
 }
 
-/* .project-button:not(:last-child){
-    margin-right: 8px;
-} */
 
 .project-button:hover,
 .project-button:focus {
@@ -358,23 +355,23 @@
     color: var(--primary-white-color);
 }
 
-.list-pictures{
+.examples{
     display: flex;
     flex-wrap: wrap;
 }
 
-.item-picture{
+.examples-item{
     width: calc(100%/3 -30px);
-    margin-right:  30px;
+    /* margin-right:  30px;
     margin-bottom: 30px;
-    
+     */
 }
 
-.item-picture:nth-child(3n){
+.examples-item:nth-child(3n){
     margin-right: 0px;
 }
 
-.item-picture:nth-last-child(-n+3){
+.examples-item:nth-last-child(-n+3){
     margin-bottom: 0px;
 }
 .project-name{
