--- a/css/styles.css
+++ b/css/styles.css
@@ -358,23 +358,36 @@
 .examples{
     display: flex;
     flex-wrap: wrap;
+    padding-right: -30px;
+    padding-bottom: -30px;
+
+    background-color:rgb(219, 231, 227)
 }
 
 .examples-item{
-    width: calc(100%/3 -30px);
-    /* margin-right:  30px;
+    /* display: block; */
     margin-bottom: 30px;
-     */
+    margin-right: 30px;
+    width: calc(100% - 60px)/3;
+    max-width: 100%;
+    /* height: auto; */
+
+
+    outline: 2px solid rgb(89, 10, 180);
+   
 }
 
-.examples-item:nth-child(3n){
+/* .examples-item:nth-child(3n){
     margin-right: 0px;
 }
 
 .examples-item:nth-last-child(-n+3){
     margin-bottom: 0px;
-}
+} */
 .project-name{
+    margin-top: 20px;
+    margin-bottom: 4px;
+    margin-left: 24px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -383,6 +396,8 @@
     color:var(--title-text-color);
 }
 .project-type{
+    margin-bottom: 20px;
+    margin-left: 24px;
     font-size: 16px;
     line-height:1.87;
     letter-spacing: 0.03em;
