--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
     display: flex;
     align-items:center;
 
-    border:1 px solid rgba(236, 236, 236, 1);
+    border bottom: ;:1px solid rgba(236, 236, 236, 1);
 }
 
 .nav{
@@ -208,11 +208,11 @@
     color:var(--title-text-color);
 }
 
+
 .features{
     display: flex;
-  
-
 }
+
 .features-item{
     
     background-color:tomato;
