--- a/css/styles.css
+++ b/css/styles.css
@@ -313,16 +313,14 @@
 /* footer */
 
 .footer{
-    display: flex;
     background-color:var(--dark-background-color);
     
 }
 
-.logo-bottom{
-    margin-top: 75px;
-    margin-left: 215px;
+.logo{
+    padding-left: 215px;
+    padding-top: 60px;
     margin-bottom: 20px;
-
 }
 .footer-logo{
     font-family: var(--secondary-font-family);
@@ -343,18 +341,28 @@
     
 }
 
+
 .add{
-    flex-direction: column;
-    
     font-style: normal;
 }
 .post-add{
+    padding-left: 215px;
+    margin-bottom: 9px;
     font-size: 14px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     color:var(--primary-white-color);
     
 }
+.add-info{
+    display: flex;
+    flex-direction: column;
+
+    padding-left: 215px;
+    padding-bottom: 60px;
+    
+}
+
 .footer-contacts{
     font-size: 14px;
     line-height: 1.71;
@@ -395,7 +403,6 @@
 
 }
 
-
 .project-button:hover,
 .project-button:focus {
     background-color: var(--accent-color);
@@ -420,13 +427,6 @@
     
 }
 
-/* .examples-item:nth-child(3n){
-    margin-right: 0px;
-}
-
-.examples-item:nth-last-child(-n+3){
-    margin-bottom: 0px;
-} */
 .project-content{
     border:1px solid #eeeeee;
     border-top: none;
