--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,6 @@
 }
 
 .hero-button{
-    /* margin-bottom: 200px; */
 
     font-family:inherit;
     font-weight:900;
@@ -269,6 +268,8 @@
 
 /* section team */
 .section-team{
+    padding-top: 94px;
+    padding-bottom: 94px;
     background-color:var(--secondary-background-color);
 }
 
@@ -280,9 +281,8 @@
 
 .team>li{
     width: calc(100%-90px)/4;
-    padding-bottom: 94px;
-    /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2); */
-    /* border-radius: 0px 0px 4px 4px; */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2); */
+    border-radius: 0px 0px 4px 4px;
 
 
 }
