--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,9 @@
     }
 
 .header{
-    border bottom: 1px solid rgba(236, 236, 236, 1);
+    padding-top: 25px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #ECECEC;;
 
 }
 .container{
@@ -80,8 +82,6 @@
     display:flex;
     align-items: center; 
     margin-left: 90px;
-    padding-top: 32px;
-    padding-bottom: 32px;
 
 }
 
