--- a/css/styles.css
+++ b/css/styles.css
@@ -167,9 +167,12 @@
     line-height:1.36;
     text-transform: uppercase;
     letter-spacing: 0.06em;
+    width: 696px;
+    margin: 0 auto;
+    margin-bottom: 30px;
     color:var(--primary-white-color);
 
-    margin-bottom: 30px;
+    
 
 }
 
