--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
         margin: 0px;
     }
 
-    ul {
+     ul {
         list-style: none;
         margin: 0px;
         padding: 0px;
@@ -122,7 +122,6 @@
     margin-right: 50px;
 }
 
-
 .contacts-mail{
     font-weight: 500;
     font-size: 14px;
@@ -171,8 +170,6 @@
     margin: 0 auto;
     margin-bottom: 30px;
     color:var(--primary-white-color);
-
-    
 
 }
 
@@ -274,7 +271,7 @@
 
 .team>li{
     width: calc(100%-90px)/4;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2); 
     border-radius: 0px 0px 4px 4px;
 }
 
